[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainMenu/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/UI.gd" type="Script" id=3]
[ext_resource path="res://UI/ConfirmQuit/ConfirmQuit.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/GamePauseMenu/GamePauseMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Options/Options.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/LevelSeed/LevelSeed.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/World/World.gd" type="Script" id=8]

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 8 )

[node name="Level" parent="." instance=ExtResource( 1 )]
pause_mode = 1

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 3 )
initial_menu = "MainMenu"

[node name="ConfirmQuit" parent="UI" instance=ExtResource( 4 )]

[node name="GamePauseMenu" parent="UI" instance=ExtResource( 5 )]

[node name="MainMenu" parent="UI" instance=ExtResource( 2 )]

[node name="Options" parent="UI" instance=ExtResource( 6 )]

[node name="LevelSeed" parent="UI" instance=ExtResource( 7 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"
